Fleshing out package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
   "dependencies": {
     "fs": "0.0.2"
-  }
+  },
+  "name": "navaja-sql",
+  "version": "0.1.0",
+  "description": "Contains SQL scripts to create the Navaja-API database.",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chaim1221/Navaja-SQL.git"
+  },
+  "author": "Chaim Eliyah",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/chaim1221/Navaja-SQL/issues"
+  },
+  "homepage": "https://github.com/chaim1221/Navaja-SQL#readme"
 }
